remove bad parameters definition
